<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.UserInformationActivity">

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@mipmap/ic_launcher_round" />

    <EditText
        android:id="@+id/edtName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="64dp"
        android:layout_marginEnd="32dp"
        android:ems="10"
        android:hint="@string/hint_fullName"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView3" />

    <EditText
        android:id="@+id/edtPhoneNo"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="@string/hint_phoneNumber"
        android:inputType="phone"
        app:layout_constraintEnd_toEndOf="@+id/edtName"
        app:layout_constraintStart_toStartOf="@+id/edtName"
        app:layout_constraintTop_toBottomOf="@+id/edtName" />

    <EditText
        android:id="@+id/edtEmail"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:editable="false"
        android:ems="10"
        android:inputType="textEmailAddress"
        app:layout_constraintEnd_toEndOf="@+id/edtPhoneNo"
        app:layout_constraintStart_toStartOf="@+id/edtPhoneNo"
        app:layout_constraintTop_toBottomOf="@+id/edtPhoneNo" />

    <EditText
        android:id="@+id/edtPostalAddress"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="@string/hint_postalAddress"
        android:inputType="textPostalAddress"
        app:layout_constraintEnd_toEndOf="@+id/edtEmail"
        app:layout_constraintStart_toStartOf="@+id/edtEmail"
        app:layout_constraintTop_toBottomOf="@+id/edtEmail" />

    <Button
        android:id="@+id/btnAdd"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@color/colorPrimaryDark"
        android:text="@string/btn_label_add"
        android:textColor="@android:color/white"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="@+id/edtPostalAddress"
        app:layout_constraintStart_toStartOf="@+id/edtPostalAddress"
        app:layout_constraintTop_toBottomOf="@+id/edtPostalAddress" />

    <TextView
        android:id="@+id/tv_label_user_info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/tv_label_user_info"
        app:layout_constraintEnd_toEndOf="@id/btnAdd"
        app:layout_constraintStart_toStartOf="@id/btnAdd"
        app:layout_constraintTop_toBottomOf="@id/btnAdd" />
</androidx.constraintlayout.widget.ConstraintLayout>