<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/edt_background">

    <ImageView
        android:id="@+id/businessIcon"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@mipmap/ic_launcher" />

    <TextView
        android:id="@+id/tvBusinessName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="24dp"
        android:text="@string/hint_business_name"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/businessIcon"
        app:layout_constraintTop_toTopOf="@+id/businessIcon" />

    <TextView
        android:id="@+id/tvBusinessContact"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:text="@string/hint_business_contact"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/tvBusinessName"
        app:layout_constraintHorizontal_bias="0.514"
        app:layout_constraintStart_toStartOf="@+id/tvBusinessName"
        app:layout_constraintTop_toBottomOf="@+id/tvBusinessName" />

    <TextView
        android:id="@+id/tvBusinessEmail"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:text="@string/hint_business_email"
        android:textStyle="italic"
        app:layout_constraintEnd_toEndOf="@+id/tvBusinessContact"
        app:layout_constraintStart_toStartOf="@+id/tvBusinessContact"
        app:layout_constraintTop_toBottomOf="@+id/tvBusinessContact" />

    <TextView
        android:id="@+id/tvBusinessAddress"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:text="@string/hint_business_address"
        android:textSize="12sp"
        android:textStyle="italic"
        app:layout_constraintEnd_toEndOf="@+id/tvBusinessEmail"
        app:layout_constraintStart_toStartOf="@+id/tvBusinessEmail"
        app:layout_constraintTop_toBottomOf="@+id/tvBusinessEmail" />
</androidx.constraintlayout.widget.ConstraintLayout>