<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraintLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.GruhUdhyogCreate">

    <ScrollView
        android:id="@+id/formScrollView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:isScrollContainer="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent">

        <LinearLayout
            android:id="@+id/formLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/register_form_background"
            android:orientation="vertical"
            android:paddingStart="@dimen/margin_4dp"
            android:paddingLeft="@dimen/margin_4dp"
            android:paddingTop="@dimen/margin_4dp"
            android:paddingEnd="@dimen/margin_4dp"
            android:paddingRight="@dimen/margin_4dp"
            android:paddingBottom="@dimen/margin24dp">

            <EditText
                android:id="@+id/edtBusinessName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_4dp"
                android:background="@drawable/edt_background"
                android:ems="10"
                android:hint="@string/hint_business_name"
                android:inputType="textPersonName"
                android:textColor="@android:color/black" />

            <EditText
                android:id="@+id/edtBusinessAddress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_4dp"
                android:background="@drawable/edt_background"
                android:ems="10"
                android:hint="@string/hint_business_address"
                android:inputType="textPostalAddress"
                android:textColor="@android:color/black" />

            <EditText
                android:id="@+id/edtBusinessContact"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_4dp"
                android:background="@drawable/edt_background"
                android:ems="10"
                android:hint="@string/hint_business_contact"
                android:inputType="phone"
                android:textColor="@android:color/black" />

            <EditText
                android:id="@+id/edtBusinessEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_4dp"
                android:background="@drawable/edt_background"
                android:ems="10"
                android:hint="@string/hint_business_email"
                android:inputType="textEmailAddress"
                android:textColor="@android:color/black" />

            <EditText
                android:id="@+id/edtBusinessOwnerName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_4dp"
                android:background="@drawable/edt_background"
                android:ems="10"
                android:hint="@string/hint_business_owner_name"
                android:inputType="textPersonName"
                android:textColor="@android:color/black" />

            <EditText
                android:id="@+id/edtBusinessOwnerAddress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_4dp"
                android:background="@drawable/edt_background"
                android:ems="10"
                android:hint="@string/hint_business_owner_address"
                android:inputType="textPostalAddress"
                android:textColor="@android:color/black" />

            <Button
                android:id="@+id/btnRegisterBusiness"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_4dp"
                android:background="@drawable/btn_custom_background"
                android:text="@string/label_register"
                android:textColor="@android:color/white"
                android:textSize="16sp"
                android:textStyle="bold" />
        </LinearLayout>
    </ScrollView>

    <androidx.viewpager.widget.ViewPager
        android:id="@+id/viewPager"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="@dimen/margin_16dp"
        android:layout_marginTop="@dimen/margin_16dp"
        android:background="@drawable/edt_background"
        app:layout_constraintBottom_toTopOf="@+id/formScrollView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

    </androidx.viewpager.widget.ViewPager>

    <ProgressBar
        android:id="@+id/pBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>